@@ -1,4 +1,5 @@
 0.5.0 - currently working on
+- [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field
 - [#1907] Fix: Oelib's locallang_db.xml is damaged
 - [#1904] Fix: Non-sense unit tests in tx_oelib_testingFramework_testcase
 - [#1903] Change: Use $this->setExpectedException() instead of try-catch-block in Unit tests
